--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             </div>
             <div class="hero-right">
                 <div class="image-container">
-                    <img src="images/khan.jpeg" alt="Sadeed Akhtar Khan Bibi" class="profile-image main-image">
-                    <img src="images/sadeed.jpeg" alt="Sadeed Akhtar Khan Bibi" class="profile-image overlay-image">
+                    <img src="images/Khan.jpeg" alt="Sadeed Akhtar Khan Bibi" class="profile-image main-image">
+                    <img src="images/Sadeed.jpeg" alt="Sadeed Akhtar Khan Bibi" class="profile-image overlay-image">
                 </div>
             </div>
         </div>
